  BBC 52 Menu (Video/CPU, top border not removed)
  Bolo (MFP, couldn't start a game)
  Captain Blood (IKBD, fixed problem when setting the clock)
  Fokker and Downfall (ACIA/IKBD, had regressed in Hatari v1.6.x)
  Fuzion CD 77/78/84 Menu (MFP, random crash with digidrums in STF mode)
  James Pond (Fuzion CD 25) (FDC, game stuck during the intro)
  Microprose Golf (FDC, crash during the intro)
  Super Hang On and Super Monaco GP (MFP, flickering rasters)
  The Final Conflict (MFP, locked during the sampled intro music)
  The Sentinel (IKBD, mouse much too slow)
  Zuul 100/101 Menu (MFP, flickering top border)

Fixed demos :
  Anomaly Demo Main Menu by MJJ Prod (MFP, flickering top/bottom borders)
  Audio Artistic Demo by Big Alec (MFP, bad sample speed at start)
  Decade Demo - Reset (MFP, flickering bottom border)
  High Fidelity Dreams by Aura (MFP, flickering left rasters)
  ST-NICCC 2000 Demo by Oxygene (FDC, demo ran slower than expected)

Fixed apps :
  Monst v1.x
  Spectrum 512 (IKBD, mouse too slow)
  Cubase (when MIDI was enabled after Hatari startup)


 Version 1.6.2 (2012-06-24):
 ---------------------------

Emulation:
- ST video changes :
  - Fixes a rare potential crash when running in color mode and switching
    to monochrome mode for more than one VBL (eg : protection code used
    in The European Demos and The Transbeauce II Demo)
  - add more timings for the 224 bytes overscan detection on STE
  - Correct write timing for BCHG/BCLR/BSET when removing borders
  - Fix to top/bottom border removal in a rare case
- IKBD/ACIA changes :
  - Handle commands 0x12 and 0x14 sent during the IKBD reset
    (enable both mouse and joystick reporting at the same time)
  - Handle the TX IRQ in the ACIA (bits CR6+CR5=0x01)
  - Implemented IKBD set-clock function
- Sound changes :
  - Improve YM2149 sound filtering to be closer to a real STF
  - Increase output volume for STE DMA sound (compared to the YM2149's volume)
- DSP changes :