@@ -307,6 +307,11 @@ works on a real ST should work also in Hatari</b>.</p>
       <td>&nbsp;</td>
     </tr>
     <tr>
+      <td>Spidertronic</td>
+      <td>1.7</td>
+      <td>Crashed before the 50/60 Hz selection screen with Hatari &lt; 1.7</td>
+    </tr>
+    <tr>
       <td>Star Goose</td>
       <td>1.1</td>
       <td>&nbsp;</td>
